--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "eslint": "^7.9.0",
     "fs-extra": "^9.0.1",
     "http-server": "^0.12.3",
-    "vcd-stream": "^0.12.0",
+    "vcd-stream": "^0.13.0",
     "yargs": "^16.0.3"
   },
   "eslintConfig": {
-    "extends": "@drom/eslint-config/eslint4/node8"
+    "extends": "@drom/eslint-config/eslint4/node8",
+    "parserOptions": {
+      "ecmaVersion": 2020
+    }
   }
 }
