--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "doppler",
   "version": "1.0.0",
   "description": "flex waves",
-  "main": "index.js",
+  "main": "lib/index.js",
   "directories": {
     "test": "test"
   },
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/drom/doppler#readme",
   "dependencies": {
     "json5": "^2.1.3",
+    "lodash.get": "^4.4.2",
     "lodash.range": "^3.2.0",
     "onml": "^1.2.0"
   },
