--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "doppler",
-  "version": "1.1.0",
+  "name": "@wavedrom/doppler",
+  "version": "0.1.0",
   "description": "flex waves",
   "main": "lib/index.js",
   "directories": {
