--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/drom/doppler#readme",
   "dependencies": {
     "codemirror": "^5.62.2",
-    "onml": "^2.1.0"
+    "onml": "^2.1.0",
+    "lodash.get": "^4.4.2"
   },
   "devDependencies": {
     "@drom/eslint-config": "^0.10.0",
