--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
   "homepage": "https://github.com/drom/doppler#readme",
   "dependencies": {
     "codemirror": "^5.62.2",
-    "onml": "^2.1.0",
-    "lodash.get": "^4.4.2"
+    "lodash.get": "^4.4.2",
+    "onml": "^2.1.0"
   },
   "devDependencies": {
     "@drom/eslint-config": "^0.10.0",
-    "eslint": "^8.13.0"
+    "chai": "^4.3.6",
+    "eslint": "^8.13.0",
+    "mocha": "^10.0.0"
   },
   "eslintConfig": {
     "extends": "@drom/eslint-config/eslint4/node8",
