--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lib"
   ],
   "scripts": {
-    "test": "eslint lib"
+    "test": "eslint lib",
+    "watch": "watchify ./lib/page-format.js -o docs/page-format.js -v"
   },
   "repository": {
     "type": "git",
@@ -29,14 +30,15 @@
   },
   "devDependencies": {
     "@drom/eslint-config": "^0.12.0",
-    "chai": "^4.3.7",
-    "eslint": "^8.44.0",
-    "mocha": "^10.2.0"
+    "browserify": "^17.0.0",
+    "chai": "^4.4.1",
+    "eslint": "^8.56.0",
+    "mocha": "^10.3.0",
+    "onml": "^2.1.0",
+    "terser": "^5.27.0",
+    "watchify": "^4.0.0"
   },
   "eslintConfig": {
-    "extends": "@drom/eslint-config/eslint8/node12",
-    "parserOptions": {
-      "ecmaVersion": 2020
-    }
+    "extends": "@drom/eslint-config/eslint8/node12"
   }
 }
